add ResumerDAL.cs, SchoolDAl.cs, School.cs change Resume.Images to Resume.Photoes in Resume.cs

--- a/SQLDAL/SQLDAL.csproj
+++ b/SQLDAL/SQLDAL.csproj
@@ -62,9 +62,25 @@
   <ItemGroup>
     <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResumeDAL.cs" />
+    <Compile Include="SchoolDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{abbd8b4c-bc5e-4284-a61e-1583f3edd1ad}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\From\From.csproj">
+      <Project>{cf8d24a4-b37d-46aa-b71f-65abc3313247}</Project>
+      <Name>From</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{cf2176e1-a3fd-4c8e-a3ad-cc457fea8ef2}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
