--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Resume.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="School.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
