--- a/From/From.csproj
+++ b/From/From.csproj
@@ -46,14 +46,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Addfrom.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Addfrom.Designer.cs">
+      <DependentUpon>Addfrom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Homefrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Homefrom.Designer.cs">
+      <DependentUpon>Homefrom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Loginfrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Loginfrom.Designer.cs">
+      <DependentUpon>Loginfrom.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Addfrom.resx">
+      <DependentUpon>Addfrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Homefrom.resx">
+      <DependentUpon>Homefrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Loginfrom.resx">
+      <DependentUpon>Loginfrom.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
