--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,15 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MajorBLL.cs" />
     <Compile Include="ResumeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolBLL.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\From\From.csproj">
-      <Project>{cf8d24a4-b37d-46aa-b71f-65abc3313247}</Project>
-      <Name>From</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{cf2176e1-a3fd-4c8e-a3ad-cc457fea8ef2}</Project>
       <Name>Model</Name>
