--- a/From/App.config
+++ b/From/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="yqz" connectionString="Data Source=YQZDPC\SQLEXPRESS;Initial Catalog=C#RMS;Integrated Security=SSPI"/>
+	</connectionStrings>
 </configuration>
