--- a/From/From.csproj
+++ b/From/From.csproj
@@ -52,11 +52,17 @@
     <Compile Include="Addfrom.Designer.cs">
       <DependentUpon>Addfrom.cs</DependentUpon>
     </Compile>
-    <Compile Include="Homefrom.cs">
+    <Compile Include="EditFrom.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Homefrom.Designer.cs">
-      <DependentUpon>Homefrom.cs</DependentUpon>
+    <Compile Include="EditFrom.Designer.cs">
+      <DependentUpon>EditFrom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HomeFrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HomeFrom.Designer.cs">
+      <DependentUpon>HomeFrom.cs</DependentUpon>
     </Compile>
     <Compile Include="Loginfrom.cs">
       <SubType>Form</SubType>
@@ -66,11 +72,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryFrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QueryFrom.Designer.cs">
+      <DependentUpon>QueryFrom.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Addfrom.resx">
       <DependentUpon>Addfrom.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Homefrom.resx">
-      <DependentUpon>Homefrom.cs</DependentUpon>
+    <EmbeddedResource Include="EditFrom.resx">
+      <DependentUpon>EditFrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HomeFrom.resx">
+      <DependentUpon>HomeFrom.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Loginfrom.resx">
       <DependentUpon>Loginfrom.cs</DependentUpon>
@@ -84,6 +99,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="QueryFrom.resx">
+      <DependentUpon>QueryFrom.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -96,6 +114,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{abbd8b4c-bc5e-4284-a61e-1583f3edd1ad}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{cf2176e1-a3fd-4c8e-a3ad-cc457fea8ef2}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
