--- a/SQLDAL/App.config
+++ b/SQLDAL/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<connectionStrings>
-		<add name="ConnString" connectionString="server.;databaes=C#RMS;Integrated Security=SSPI"/>
+		<add name="yqz" connectionString="Data Source=YQZDPC\SQLEXPRESS;Initial Catalog=C#RMS;Integrated Security=SSPI"/>
 	</connectionStrings>
 </configuration>
